<resources>
    <string name="app_name">CalculaterApp</string>
    <string name="mc">mc</string>
    <string name="mplus">m+</string>
    <string name="mminus">m-</string>
    <string name="mr">mr</string>
    <string name="yüzde">%</string>
    <string name="zero">0</string>
    <string name="virgül">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">c</string>
    <string name="divide">÷</string>
    <string name="multiple">x</string>
    <string name="delete">←</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="negative">-</string>
</resources>
